<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_owned"
            android:icon="@drawable/ic_menu_repo"
            android:title="@string/my_repos"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"/>
    </group>



</menu>
