<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_margin"
    tools:context=".ui.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_normal"
        android:minHeight="350dp"
        android:minWidth="250dp"
        app:cardElevation="@dimen/spacing_large"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:orientation="vertical"
            tools:ignore="UselessParent">


                <EditText
                    android:id="@+id/loginEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"/>


                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"/>

            <Button
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"/>

        </LinearLayout>

    </RelativeLayout>

    </android.support.v7.widget.CardView>


</android.support.design.widget.CoordinatorLayout>